src/test/ui/codemap_tests/issue-11715.stderr
error[E0499]: cannot borrow `x` as mutable more than once at a time
  --> $DIR/issue-11715.rs:100:18
   |
LL |     let y = &mut x;
   |                  - first mutable borrow occurs here
LL |     let z = &mut x; //~ ERROR cannot borrow
   |                  ^ second mutable borrow occurs here
LL | }
   | - first borrow ends here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0499"
